--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 img {
     max-width: 100%;
 }
+
+.card-front {
+    width: 200px;
+    height: 200px;
+    background-image: linear-gradient(135deg, aquamarine, darkorchid); 
+    border-radius: 10px;
+}
