--- a/style.css
+++ b/style.css
@@ -8,3 +8,9 @@ img {
     background-image: linear-gradient(135deg, aquamarine, darkorchid); 
     border-radius: 10px;
 }
+
+.card-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+}
