--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+nav {
+    width: 100%;
+    overflow: hidden;
+    background-color: #333;
+}
+
+nav a {
+    float: left;
+    display: block;
+    color: #fff;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
 img {
     max-width: 100%;
 }
