--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+/* add media query for max width 480px mobile nav */
+
 nav {
     width: 100%;
+    height: 46px;
     overflow: hidden;
     background-color: #333;
+    position: relative;
+}
+
+#nav-links {
+    display: none;
 }
 
 nav a {
@@ -11,6 +19,14 @@ nav a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+
+nav a.icon {
+    background: #000;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 nav a:hover {
