--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-/* add media query for max width 480px mobile nav */
-
 nav {
     width: 100%;
-    height: 46px;
     overflow: hidden;
     background-color: #333;
     position: relative;
@@ -17,8 +14,9 @@ nav a {
     display: block;
     color: #fff;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 0 14px 0;
     text-decoration: none;
+    width: 100%;
 }
 
 nav a.icon {
@@ -27,11 +25,24 @@ nav a.icon {
     position: absolute;
     right: 0;
     top: 0;
+    width: fit-content;
+    padding: 14px 16px;
 }
 
 nav a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.home {
+    text-indent: -2000px;
+    background-color: #000;
+    color: #fff;
+    float: left;
+    display: block;
+    padding: 14px 16px;
+    text-decoration: none;
+    width: 100%;
 }
 
 img {
@@ -41,7 +52,7 @@ img {
 .card-front {
     width: 200px;
     height: 200px;
-    background-image: linear-gradient(135deg, aquamarine, darkorchid); 
+    background-image: linear-gradient(135deg, aquamarine, darkorchid);
     border-radius: 10px;
 }
 
@@ -49,4 +60,51 @@ img {
     width: 200px;
     height: 200px;
     border-radius: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+    nav {
+        width: 100%;
+        overflow: hidden;
+        background-color: #333;
+    }
+
+    nav ul {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        /* align-content: flex-start;*/
+    }
+
+    nav ul li {
+        list-style: none;
+    }
+
+    nav a {
+        color: #fff;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    #nav-links {
+        display: flex;
+        color: #fff;
+        text-align: left;
+        padding: 0;
+        text-decoration: none;
+    }
+
+    nav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    nav a.icon {
+        display: none;
+    }
+
+    .home {
+        display: none;
+    }
 }
