--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav a.icon {
     padding: 14px 16px;
 }
 
-nav a:hover {
+nav a:hover, nav a:focus {
     background-color: #ddd;
     color: black;
 }
