--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     line-height: 1.5;
 }
 
+/* NAVIGATION */
 nav {
     width: 100%;
     overflow: hidden;
@@ -78,23 +79,6 @@ nav a:hover, nav a:focus {
     width: 100%;
 }
 
-img {
-    max-width: 100%;
-}
-
-.card-front {
-    width: 200px;
-    height: 200px;
-    background-image: linear-gradient(135deg, aquamarine, darkorchid);
-    border-radius: 10px;
-}
-
-.card-img {
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
-}
-
 @media only screen and (min-width: 768px) {
     nav {
         width: 100%;
@@ -140,4 +124,22 @@ img {
     .home {
         display: none;
     }
+}
+
+/* CARDS */
+img {
+    max-width: 100%;
+}
+
+.card-front {
+    width: 200px;
+    height: 200px;
+    background-image: linear-gradient(135deg, aquamarine, darkorchid);
+    border-radius: 10px;
+}
+
+.card-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
 }
