--- a/style.css
+++ b/style.css
@@ -144,9 +144,29 @@ img {
     border-radius: 10px;
 }
 
-.scene {
+/* .scene {
     border: solid 1px red;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+} */
+
+.card {
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    position: relative;
+    cursor: pointer;
+}
+
+.card.is-flipped {
+    transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.card-back {
+    transform: rotateY(180deg);
 }
