--- a/style.css
+++ b/style.css
@@ -20,6 +20,17 @@
 body {
     font-family: 'DM Sans', Verdana, Geneva, Tahoma, sans-serif;
     line-height: 1.5;
+    margin: 0;
+}
+
+footer {
+    position: relative;
+    color: #fff;
+    background-color: #333;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* NAVIGATION */
