--- a/style.css
+++ b/style.css
@@ -37,11 +37,12 @@ p {
     padding: 0 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
     padding: 0 20px;
 }
 
-h1  {
+h1 {
     font-weight: bold;
     text-transform: uppercase;
     line-height: 1.25;
@@ -164,14 +165,15 @@ img {
 }
 
 .card-back {
-    background-color: aquamarine; /* fallback in case img doesn't load */
-    border-radius: 10px;
+    background-color: aquamarine;
+    /* fallback in case img doesn't load */
+    transform: rotateY(180deg);
 }
 
 .card-img {
     width: 200px;
     height: 200px;
-    border-radius: 10px;
+    border-radius: 16px;
 }
 
 .scene {
@@ -179,7 +181,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 40px 0;
+    margin: 40px 16px;
 }
 
 .card {
@@ -198,16 +200,22 @@ img {
     -webkit-transform: rotateY(180deg);
 }
 
-.card-front, .card-back {
+.card-front,
+.card-back {
     width: 100%;
     height: 100%;
+    border-radius: 16px;
     position: absolute;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
 }
 
 @media only screen and (max-width: 500px) {
-    .card-front, .card-back, .card-img, .card {
+
+    .card-front,
+    .card-back,
+    .card-img,
+    .card {
         width: 120px;
         height: 120px;
     }
