--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     font-family: 'DM Sans';
     src: url(assets/fonts/DMSans-Regular.ttf);
     font-weight: 400;
+    font-display: swap;
 }
 
 @font-face {
@@ -9,12 +10,14 @@
     src: url(assets/fonts/DMSans-Italic.ttf);
     font-weight: 400;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
     font-family: 'DM Sans';
     src: url(assets/fonts/DMSans-Bold.ttf);
     font-weight: bold;
+    font-display: swap;
 }
 
 body {
