--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav a {
     width: 100%;
 }
 
-nav a.icon {
+nav a.menu {
     background: #000;
     display: block;
     position: absolute;
@@ -145,7 +145,7 @@ nav a.icon {
         transition: 0.4s;
     }
 
-    nav a.icon {
+    nav a.menu {
         display: none;
     }
 
