--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ nav a:focus {
     nav {
         width: 100%;
         overflow: hidden;
-        background-color: #333;
+        background-color: #3E5145;
     }
 
     nav ul {
@@ -150,10 +150,6 @@ nav a:focus {
     }
 
     nav a.menu {
-        display: none;
-    }
-
-    .home {
         display: none;
     }
 }
