--- a/style.css
+++ b/style.css
@@ -54,6 +54,24 @@ h1 {
     line-height: 1.25;
 }
 
+button {
+    background-color: #6f8878;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 14px 28px;
+    font-family: 'DM Sans', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    left: 20px;
+    margin: 10px 0;
+}
+
 /* NAVIGATION */
 nav {
     width: 100%;
