--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
 button {
     background-color: #6f8878;
     border: none;
-    border-radius: 8px;
+    border-radius: 6px;
     color: white;
     padding: 14px 28px;
     font-family: 'DM Sans', sans-serif;
@@ -70,6 +70,13 @@ button {
     position: relative;
     left: 20px;
     margin: 10px 0;
+}
+
+button:hover,
+button:focus {
+    background-color: #4f345a;
+    color: #fff;
+    transition: 0.4s;
 }
 
 /* NAVIGATION */
