--- a/style.css
+++ b/style.css
@@ -185,6 +185,32 @@ nav a:focus {
     }
 }
 
+/* INSTRUCTIONS ACCORDION */
+.accordion {
+    color: #fff;
+    cursor: pointer;
+    padding: 20px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    border-radius: 0;
+    position: relative;
+    left: 0;
+}
+
+.active, .accordion:hover {
+    background-color: #3E5145;
+}
+
+.panel {
+    padding: 0 20px;
+    background-color: #333;
+    display: none;
+    overflow: hidden;
+}
+
 /* CARDS */
 img {
     max-width: 100%;
