--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ footer {
     position: fixed;
     bottom: 0;
     color: #fff;
-    background-color: #333;
+    background-color: #3E5145;
     height: 50px;
     width: 100%;
     display: flex;
