--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 40px 16px;
+    margin: 40px 16px 60px 16px;
 }
 
 .card {
